[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "incident-env"
version = "1.0.0"
description = "Incident Report Auto-Filler OpenEnv Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.31.0",
    "pyyaml==6.0.1",
    "openenv-core",
]

[project.scripts]
server = "server.main:app"
